--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,6 +6,8 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
 	<link rel="stylesheet" href="css/vendor/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/vendor/font-awesome.css" />
 	<link rel="stylesheet" href="css/vendor/jqcloud.min.css" />
