--- a/webapp/index.html
+++ b/webapp/index.html
@@ -33,10 +33,11 @@
 		</div>
 	</div>
 
-	<div id="tag-cloud">
+	<div id="tag-cloud" style="display: none;"></div>
 
-	</div>
+	<div id="name-logo"><strong>GALAXIS</strong></div>
 
+	<div id="image-logo"><img src="images/galaxis_icon.png" /></div>
 
 	<button id="btnRecord" class="recording-button hidden-xs"><h1><i class="fa fa-microphone"></i></h1></button>
 	<div style="display: none;">
@@ -53,7 +54,9 @@
     	<div class="answer-text">
     		{{{answerText}}}
     	</div>
-    	<input type="text" class="question-input">
+    	<div class="input-field">
+    		<input type="text" class="question-input">
+    	</div>
     </div>
 </script>
 
