Positioning microphone, credits

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -39,7 +39,16 @@
 
 	<div id="image-logo"><img src="images/galaxis_icon.png" /></div>
 
-	<button id="btnRecord" class="recording-button hidden-xs"><h1><i class="fa fa-microphone"></i></h1></button>
+	<div id="credits" class="hidden-xs"><span class="made-by">made by</span> <span class="">the 44th move</span></div>
+
+	
+
+	<div id="microphone-section" class="hidden-xs">
+		<button id="btnRecord" class="recording-button hidden-xs"><h1><i class="fa fa-microphone"></i></h1></button>
+		<div class="microphone-label">CLICK AND HOLD TO SPEAK</div>
+	</div>
+
+
 	<div style="display: none;">
 		<div id="speech_record_status" ></div>
 		<div id="speech_record_timer"></div>
