--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,7 +6,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 
 	<link rel="stylesheet" href="css/vendor/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/vendor/font-awesome.css" />
